--- a/docs/de-de/modules/fulfillment/pages/versand-vorbereiten.adoc
+++ b/docs/de-de/modules/fulfillment/pages/versand-vorbereiten.adoc
@@ -345,11 +345,11 @@ Versandprofil erstellen:
 |Wähle eine Priorität aus der Dropdown-Liste. Die Priorität bestimmt die Reihenfolge, in der Versandprofile einer Region aufgelistet werden.
 
 | *Kategorie*
-|Wähle eine Kategorie aus der Dropdown-Liste. Die Kategorie ermöglicht eine zusätzliche Priorisierung der Versandprofile im Warenkorb. Standardmäßig ist immer Kategorie *1* eingestellt, d.h. alle Versandprofile werden gleichwertig angezeigt. Weitere Informationen sowie ein Beispiel findest du im Kapitel <<fulfillment/versand-vorbereiten#1300, Tipps und Tricks: Kategorie>>.
+|Wähle eine Kategorie aus der Dropdown-Liste. Die Kategorie ermöglicht eine zusätzliche Priorisierung der Versandprofile im Warenkorb. Standardmäßig ist immer Kategorie *1* eingestellt, d.h. alle Versandprofile werden gleichwertig angezeigt. Weitere Informationen sowie ein Beispiel findest du im Kapitel xref:fulfillment:versand-vorbereiten.adoc#1300[Tipps und Tricks: Kategorie].
 
 | *Artikel-Portoaufschlag*
 |Aktiviere den Artikel-Portoaufschlag, um die im Artikeldatensatz gespeicherten Portoaufschläge zu aktivieren. Bis zu 2 Portoaufschläge können bei der Hauptvariante eines Artikels im Bereich *Versand* eingegeben werden. *Portoaufschlag 1* fügt den Versandkosten den dort gespeicherten Preis für den ersten Artikel hinzu, *Portoaufschlag 2* gilt ab dem zweiten Artikel. Portoaufschläge bieten sich für größere oder sperrige Artikel an, deren Versand teurer ist. +
-Weitere Informationen findest du im Kapitel <<fulfillment/versand-vorbereiten#1100, Tipps und Tricks: Portoaufschläge>>.
+Weitere Informationen findest du im Kapitel xref:fulfillment:versand-vorbereiten.adoc#1100[Tipps und Tricks: Portoaufschläge].
 
 | *PostIdent*
 |Bei PostIdent handelt es sich um die Legitimationsprüfung durch die Deutsche Post AG. Sie dient zur Verifizierung von Personen, z.B. im Zusammenhang mit dem nötigen Altersnachweis für FSK 18-Artikel. Wenn du diese Option aktivieren möchtest, setze hier ein Häkchen. +
@@ -419,7 +419,7 @@ Mit dieser Funktion kannst du einfach und schnell die Versandprofile für neue A
 
 | *Konto*
 |Wähle ein oder mehrere eBay-Konten oder die Option *ALLE*. +
-*_Wichtig:_* Mindestens 2 Konten müssen angelegt sein, andernfalls ist diese Option nicht sichtbar. Weitere Informationen findest du im Kapitel <<fulfillment/versand-vorbereiten#1200, Tipps und Tricks: Versandkosten von Bestellungen über eBay>>.
+*_Wichtig:_* Mindestens 2 Konten müssen angelegt sein, andernfalls ist diese Option nicht sichtbar. Weitere Informationen findest du im Kapitel xref:fulfillment:versand-vorbereiten.adoc#1200[Tipps und Tricks: Versandkosten von Bestellungen über eBay].
 
 | *Listingtyp*
 |Lege fest, für welchen Listing-Typ bei eBay dieses Versandprofil freigegeben werden soll.
