--- a/docs/en-gb/modules/fulfilment/pages/preparing-the-shipment.adoc
+++ b/docs/en-gb/modules/fulfilment/pages/preparing-the-shipment.adoc
@@ -345,11 +345,11 @@ Creating a shipping profile:
 |Select the priority from the drop-down list. The priority determines which shipping profile is displayed first, second, third, etc.
 
 | *Category*
-|Select a category from the drop-down list. The category is another way to prioritise shipping profiles in the shopping cart. Category *1* is selected by default. This means that all of the shipping profiles are given the same priority. Further information can be found in the chapter <<fulfilment/preparing-the-shipment#1300, Tips and tricks: Category>>.
+|Select a category from the drop-down list. The category is another way to prioritise shipping profiles in the shopping cart. Category *1* is selected by default. This means that all of the shipping profiles are given the same priority. Further information can be found in the chapter xref:fulfilment:preparing-the-shipment.acod#1300[Tips and tricks: Category].
 
 | *Item extra shipping charge*
 |Place a check mark to activate the item extra shipping charge that are saved in the item data record. Up to 2 extra shipping charges can be saved for the item's main variation in the *Shipping* area. *Extra shipping charge 1* is added to the shipping costs for the first item. *Extra shipping charge 2* is added to the shipping costs for all additional items. Extra shipping charges are useful for large or bulky items that are particularly expensive to ship. +
-Further information can be found in the chapter <<fulfilment/preparing-the-shipment#1100, Tips and tricks: Extra shipping charges>>.
+Further information can be found in the chapter xref:fulfilment:preparing-the-shipment.adoc#1100[Tips and tricks: Extra shipping charges].
 
 | *PostIdent*
 |PostIdent is the authority verification by the Deutsche Post AG. It serves to verify customers, e.g. in connection with the proof of age for 18+ items. If you want to activate this option, place a check mark. +
@@ -419,7 +419,7 @@ This function allows you to easily and quickly assign the shipping profile to ne
 
 | *Account*
 |Select one or more eBay accounts or select the option *ALL*. +
-*_Important:_* You need to have set up at least 2 accounts, otherwise this option is not visible. Further information can be found in the chapter <<fulfilment/preparing-the-shipment#1200, Tips and tricks: Shipping costs for orders placed on eBay>>.
+*_Important:_* You need to have set up at least 2 accounts, otherwise this option is not visible. Further information can be found in the chapter xref:fulfilment:preparing-the-shipment.adoc#1200[Tips and tricks: Shipping costs for orders placed on eBay].
 
 | *Listing type*
 |Decide which eBay listing type you want to activate this shipping profile for.
