--- a/docs/de-de/modules/crm/pages/emailbuilder.adoc
+++ b/docs/de-de/modules/crm/pages/emailbuilder.adoc
@@ -137,6 +137,10 @@ In deinem plentymarkets System befindet sich bereits ein Ordner mit einigen vord
 .Ordnerstruktur im EmailBuilder
 image::crm:emailbuilder-ordner-struktur.png[width=640, height=360]
 
+////
+TODO: Screenshot erneuern.
+////
+
 [#ordner-erstellen]
 === Ordner erstellen
 
@@ -146,7 +150,7 @@ Erstelle Ordner, um später eine bessere Übersicht über deine E-Mail-Vorlagen 
 Ordner erstellen:
 
 . Öffne das Menü *CRM » EmailBuilder (Testphase)*.
-. Klicke unten links auf icon:plus[role="green"] *Neuer Hauptordner*. +
+. Klicke unten links auf icon:ad[set=material] *Neuer Hauptordner*. +
 → Das Fenster *Neuen Ordner erstellen* wird geöffnet.
 . Gib den Namen für den Ordner ein.
 . Klicke auf *Speichern*. +
@@ -194,7 +198,7 @@ Unterordner erstellen:
 . Öffne das Menü *CRM » EmailBuilder (Testphase)*.
 . Klicke in der Zeile des Ordners, für den du einen Unterordner erstellen möchtest, auf icon:more_vert[set=material]. +
 → Ein Fenster wird geöffnet.
-. Klicke auf icon:plus[] *Neuer Unterordner*. +
+. Klicke auf icon:add[set=material] *Neuer Unterordner*. +
 → Das Fenster *Neuen Ordner erstellen* wird geöffnet.
 . Gib den Namen für den Unterordner ein.
 . Klicke auf *Speichern*. +
@@ -247,7 +251,7 @@ Vorlage für den Header erstellen:
 . Öffne das Menü *CRM » EmailBuilder (Testphase)*.
 . Klicke in der Zeile des Ordners bzw. Unterordners, in dem du einen Header erstellen möchtest, auf icon:more_vert[set=material]. +
 → Ein Fenster wird geöffnet.
-. Klicke auf icon:plus[] *Neuer Header*.
+. Klicke auf icon:add[set=material] *Neuer Header*.
 . Gib einen Namen für den Header ein.
 . *Speichere* (icon:save[set=material]) die Einstellungen. +
 → Die Vorlage wird erstellt.
@@ -288,7 +292,7 @@ Vorlage für den Footer erstellen:
 . Öffne das Menü *CRM » EmailBuilder (Testphase)*.
 . Klicke in der Zeile des Ordners bzw. Unterordners, in dem du einen Footer erstellen möchtest, auf icon:more_vert[set=material]. +
 → Ein Fenster wird geöffnet.
-. Klicke auf icon:plus[] *Neuer Footer*. +
+. Klicke auf icon:add[set=material] *Neuer Footer*. +
 → Eine weitere Ansicht öffnet sich.
 . Gib einen Namen für den Footer ein.
 . *Speichere* (icon:save[set=material]) die Einstellungen. +
@@ -340,7 +344,7 @@ Vorlage erstellen:
 . Öffne das Menü *CRM » EmailBuilder (Testphase)*.
 . Klicke in der Zeile des Ordners, in dem du eine Vorlage erstellen möchtest, auf icon:more_vert[set=material]. +
 → Ein Fenster wird geöffnet.
-. Klicke auf icon:plus[] *Neue Vorlage*.
+. Klicke auf icon:add[set=material] *Neue Vorlage*.
 . Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<#table-emailbuilder-create-template>> und <<#image-emailbuilder-template>>.
 . *Speichere* (icon:save[set=material]) die Einstellungen.
 
@@ -468,35 +472,35 @@ a|Ermöglicht die Darstellung von Text in einem zweispaltigen Layout. Mit einem 
 
 Du kannst weitere Widgets in dieses Widget einfügen, indem du diese per Drag-and-drop in eine der beiden Spalten ziehst. Füge zum Beispiel ein <<#intable-widget-bild, Bild-Widget>> ein.
 
-Klicke auf *Einstellungen schließen* (icon:times[]), um die Einstellungen zu schließen. Klicke auf *Widget löschen* (icon:delete[set=material]), um das Widget zu entfernen.
+Klicke auf *Einstellungen schließen* (icon:close[set=material]), um die Einstellungen zu schließen. Klicke auf *Widget löschen* (icon:delete[set=material]), um das Widget zu entfernen.
 
 |[#intable-widget-dreispaltiges-layout]*Dreispaltiges Layout*
 a|Ermöglicht die Darstellung von Text in einem dreispaltigen Layout. 
 
 Du kannst weitere Widgets in dieses Widget einfügen, indem du diese per Drag-and-drop in eine der drei Spalten ziehst. Füge zum Beispiel ein <<#intable-widget-bild, Bild-Widget>> ein.
 
-Mit einem Klick auf icon:settings[set=material] öffnen sich die Einstellungen. Hier kannst du das Widget mit einem Klick auf *Widget löschen* (icon:delete[set=material]) entfernen. Weitere Einstellungen können hier nicht vorgenommen werden. Klicke auf *Einstellungen schließen* (icon:times[]), um die Einstellungen zu schließen.
+Mit einem Klick auf icon:settings[set=material] öffnen sich die Einstellungen. Hier kannst du das Widget mit einem Klick auf *Widget löschen* (icon:delete[set=material]) entfernen. Weitere Einstellungen können hier nicht vorgenommen werden. Klicke auf *Einstellungen schließen* (icon:close[set=material]), um die Einstellungen zu schließen.
 
 |[#intable-widget-text]*Text*
 |In diesem Widget kannst du Text eingeben und Variablen verwenden. Du hast auch die Möglichkeit, den eingegebenen Text zu formatieren. Mache dazu einen Doppelklick auf das Wort, das du formatieren möchtest.
 
 Mit einem Klick auf icon:edit[set=material] öffnet sich auf der linken Seite die Liste mit den Variablen. Nutze die Suchfunktion, um nach einzelnen Variablen zu suchen oder finde die passenden Variablen, indem du die einzelnen Bereiche aufklappst (icon:chevron_right[set=material]). Klicke auf die Variable, die du einfügen möchtest. Gib ggf. zusätzlich Text in das Widget ein.
 
-Mit einem Klick auf icon:settings[set=material] öffnen sich die Einstellungen. Hier kannst du das Widget mit einem Klick auf *Widget löschen* (icon:delete[set=material]) entfernen. Weitere Einstellungen können hier nicht vorgenommen werden. Klicke auf *Einstellungen schließen* (icon:times[]), um die Einstellungen zu schließen.
+Mit einem Klick auf icon:settings[set=material] öffnen sich die Einstellungen. Hier kannst du das Widget mit einem Klick auf *Widget löschen* (icon:delete[set=material]) entfernen. Weitere Einstellungen können hier nicht vorgenommen werden. Klicke auf *Einstellungen schließen* (icon:close[set=material]), um die Einstellungen zu schließen.
 
 |[#intable-widget-code]*Code*
-|In diesem Widget kannst du Text im HTML-Format eingeben. Hierzu sind einige grundlegende HTML-Kenntnisse notwendig.
+|In diesem Widget kannst du Text im HTML-Format eingeben und mit <<#twig-code-widget, twig expressions>> arbeiten. Hierzu sind einige grundlegende HTML-Kenntnisse notwendig.
 
 Klicke auf icon:code[role="darkGrey"], um die Ansicht zu öffnen.
 
-Mit einem Klick auf icon:settings[set=material] öffnen sich die Einstellungen. Hier kannst du das Widget mit einem Klick auf *Widget löschen* (icon:delete[set=material]) entfernen. Weitere Einstellungen können hier nicht vorgenommen werden. Klicke auf *Einstellungen schließen* (icon:times[]), um die Einstellungen zu schließen.
+Mit einem Klick auf icon:settings[set=material] öffnen sich die Einstellungen. Hier kannst du das Widget mit einem Klick auf *Widget löschen* (icon:delete[set=material]) entfernen. Weitere Einstellungen können hier nicht vorgenommen werden. Klicke auf *Einstellungen schließen* (icon:close[set=material]), um die Einstellungen zu schließen.
 
 |[#intable-widget-kontaktadresse]*Kontaktadresse*
 |Dieses Widget enthält Musterdaten der Kontaktadresse. Das Layout der Adresse richtet sich nach den Einstellungen, die du im Menü *Einrichtung » CRM » Adress-Layout* gespeichert hast. Das bedeutet, das Layout wird im EmailBuilder genauso ausgegeben, wie das Adress-Layout, das du als xref:crm:vorbereitende-einstellungen.adoc#adress-layout[Standard-Adress-Layout] im Menü *Einrichtung » CRM » Adress-Layout* definiert hast.
 
 Mit einem Klick auf icon:settings[set=material] öffnen sich die Einstellungen. Wähle aus der Dropdown-Liste den Adresstyp *Rechnungsadresse* oder *Lieferadresse*.
 
-Klicke auf *Einstellungen schließen* (icon:times[]), um die Einstellungen zu schließen. Klicke auf *Widget löschen* (icon:delete[set=material]), um das Widget zu entfernen.
+Klicke auf *Einstellungen schließen* (icon:close[set=material]), um die Einstellungen zu schließen. Klicke auf *Widget löschen* (icon:delete[set=material]), um das Widget zu entfernen.
 
 *_Hinweis:_* Alle zum Kontakt gespeicherten Adressen findest du im Kontaktdatensatz im Bereich xref:crm:kontakt-bearbeiten.adoc#adressen[Adressen]. Die primäre Liefer- und Rechnungsadresse des Kontakts findest du im Kontaktdatensatz im Bereich xref:crm:kontakt-bearbeiten.adoc#primaere-adresse[Primäre Adresse].
 
@@ -515,11 +519,11 @@ Klicke auf *Einstellungen schließen* (icon:times[]), um die Einstellungen zu sc
 Mit einem Klick auf icon:settings[set=material] öffnen sich die Einstellungen. Hier kannst du aus den Dropdown-Listen wählen, welche Inhalte angezeigt werden sollen. Mit einem Klick auf *Neuen Eintrag hinzufügen* (icon:plus-square[role="green"]) in den Einstellungen kannst du weitere Spalten hinzufügen. Mit einem Klick auf *Eintrag entfernen* (icon:minus-square[role="red"]) löschst du die Spalten aus der Übersicht.
 
 |[#intable-widget-artikelliste]*Artikelliste*
-|In diesem Widget kannst du Text eingeben und Variablen verwenden. Beachte, dass in diesem Widget nur die Variablen aus der Unterkategorie <<#variablen-auftrag-auftragspositionen, Auftrag / Auftragspositionen>> verwendet werden können.
+|In diesem Widget kannst du Text eingeben und Variablen verwenden. Beachte, dass in diesem Widget nur die Variablen aus der Unterkategorie <<#variablen-auftrag-auftragspositionen, Auftrag / Auftragspositionen (nur für Artikellisten-Widget)>> verwendet werden können.
 
 Mit einem Klick auf icon:edit[set=material] öffnet sich auf der linken Seite die Liste mit den Variablen. Nutze die Suchfunktion, um nach einzelnen Variablen zu suchen oder finde die passenden Variablen, indem du die einzelnen Bereiche aufklappst (icon:chevron_right[set=material]). Klicke auf die Variable, die du einfügen möchtest. Gib ggf. zusätzlich Text in das Widget ein.
 
-Mit einem Klick auf icon:settings[set=material] öffnen sich die Einstellungen. Hier kannst du das Widget mit einem Klick auf *Widget löschen* (icon:delete[set=material]) entfernen. Weitere Einstellungen können hier nicht vorgenommen werden. Klicke auf *Einstellungen schließen* (icon:times[]), um die Einstellungen zu schließen.
+Mit einem Klick auf icon:settings[set=material] öffnen sich die Einstellungen. Hier kannst du das Widget mit einem Klick auf *Widget löschen* (icon:delete[set=material]) entfernen. Weitere Einstellungen können hier nicht vorgenommen werden. Klicke auf *Einstellungen schließen* (icon:close[set=material]), um die Einstellungen zu schließen.
 
 |[#intable-widget-bild]*Bild*
 | In diesem Widget kannst du Bilder wie z.B. dein Firmenlogo hochladen, um dieses in deinen E-Mail-Vorlagen anzuzeigen. Mit einem Klick auf icon:settings[set=material] öffnen sich die Einstellungen. +
@@ -527,7 +531,7 @@ Hier kannst du das Bild hochladen, die Breite und die Höhe des Bildes in px ode
 *_Hinweis:_* Gib bei dem Bild-Link immer `https` mit an. +
 *_Tipp:_* Wenn du das Bild an eine bestimmte Position setzen möchtest, kannst du das CSS-Styling im Feld *Eigenes Styling* anpassen, z.B. `margin-left: auto; margin-right: 0; display: block;` oder `float:right;display:block;`. Weitere Informationen findest du z.B. link:https://www.w3schools.com/css/css3_images.asp[hier^] und link:https://www.caniemail.com/[hier^].
 
-Klicke auf *Einstellungen schließen* (icon:times[]), um die Einstellungen zu schließen. Klicke auf *Widget löschen* (icon:delete[set=material]), um das Widget zu entfernen.
+Klicke auf *Einstellungen schließen* (icon:close[set=material]), um die Einstellungen zu schließen. Klicke auf *Widget löschen* (icon:delete[set=material]), um das Widget zu entfernen.
 
 |====
 
@@ -766,10 +770,89 @@ Vorlage löschen:
 . Klicke auf *Löschen*. +
 → Die Vorlage wird gelöscht.
 
+[#e-mail-versand-automatisieren]
+== E-Mail-Versand automatisieren
+
+Dir stehen in plentymarkets mehrere Möglichkeiten zur Verfügung, den E-Mail-Versand an deine Kund:innen zu automatisieren.
+
+[#automatischer-e-mail-versand]
+=== Automatischen E-Mail-Versand einrichten
+
+Im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Automatischer Versand* stehen dir verschiedene Ereignisse zur Verfügung, die du mit einer Vorlage verknüpfen kannst. Wähle aus der Dropdown-Liste die Vorlage, die du zuvor im Menü *CRM » EmailBuilder (Testphase)* <<#vorlage-erstellen, erstellt>> hast. Dadurch wird bei Eintritt des Ereignisses diese Vorlage automatisch an deine Kund:innen versendet.
+
+[IMPORTANT]
+.Verknüpfung vor Löschen der E-Mail-Vorlage entfernen
+====
+Das Löschen einer Vorlage, die mit einem Ereignis im Bereich *Automatischer Versand* verknüpft ist, kann zu unerwünschten Effekten führen. Entferne daher zunächst die Verknüpfung im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Automatischer Versand*, indem du in der Zeile des Ereignisses in der Dropdown-Liste die Option *Kein Versand* wählen. Anschließend löschst du die Vorlage im Menü *CRM » EmailBuilder (Testphase)*.
+====
+
+[.instruction]
+Automatischen E-Mail-Versand einrichten:
+
+. Öffne das Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Automatischer Versand*.
+. Wähle die in der Zeile des Ereignisses die Vorlage aus der Dropdown-Liste. Beachte dazu die Erläuterungen in <<#table-events-automatic-email-dispatch>>.
+. *Speichere* (icon:save[role="green"]) die Einstellungen.
+
+[[table-events-automatic-email-dispatch]]
+.Erläuterungen zu einigen Ereignissen für den automatischen Versand
+[cols="1,3"]
+|====
+|Einstellung |Erläuterung
+
+| *Neue Bestellung über den Webshop*
+|Sendet Kund:innen eine E-Mail mit der Auftragsbestätigung, nachdem der Kaufvorgang im Webshop abgeschlossen wurde. +
+*_Hinweis:_* Wenn du möchtest, dass dein:e Kund:in über diese E-Mail in die Auftragsabwicklung in deinem Webshop gelangen kann, um den Status der Bestellung einzusehen, musst du die Variable `URL zum Checkout` in die Vorlage, die du für dieses automatische Ereignis wählst, einfügen. +
+*_Hinweis:_* Du findest die Variable in der Kategorie <<#variablen-global, Global>>.
+
+| *Sende Kunde E-Mail zur Passwortänderung*
+|Sendet Kund:innen eine E-Mail mit einem Link zum neuen Passwort, der aktiv bestätigt werden muss. Die Variable `URL zum Ändern des Passworts` muss in der Vorlage enthalten sein. +
+*_Hinweis:_* Du findest die Variable in der Kategorie <<#variablen-global, Global>>.
+
+| *Newsletter Opt-In*
+|Sendet Kund:innen eine E-Mail, wenn die Kund:innen sich für den Newsletter angemeldet haben. Die Vorlage sollte den Bestätigungslink, den die Kund:innen anklicken müssen, um die Newsletter-Anmeldung abzuschließen, enthalten: `URL zur Bestätigung des Newsletter-Abonnements`. +
+*_Hinweis:_* Du findest die Variable in der Kategorie <<#variablen-newsletter, Newsletter>>.
+
+| *Bestätigung Newsletter Opt-In*
+|Sendet Kund:innen eine E-Mail als Bestätigung, sobald die Kund:innen den Bestätigungslink, der mit der E-Mail-Vorlage für das Ereignis *Newsletter Opt-In* versendet wurde, aktiviert haben.
+
+| *Benachrichtigung bei verfügbarem Artikel*
+|Sendet Kund:innen eine E-Mail mit dem Hinweis, dass ein bestimmter Artikel wieder verfügbar ist. Voraussetzung: Die Kund:innen haben zuvor ihre E-Mail-Adresse im Webshop bei dem nicht lieferbaren Artikel eingetragen.
+
+|====
+
+[#ereignisaktionen-einrichten]
+=== Ereignisaktionen einrichten
+
+Neben dem <<#automatischer-e-mail-versand, Verknüpfen von Ereignissen und Vorlagen>> hast du außerdem die Möglichkeit, Ereignisaktionen im Menü *Einrichtung » Aufträge » Ereignisse* einzurichten. Definiere ein Ereignis, setze einen oder mehrere Filter und lege Aktionen fest, die von deinem plentymarkets System automatisch im Ereignisfall ausgeführt werden.
+
+Richte z.B. ein, dass der E-Mail-Versand eines Gutscheins ausgelöst wird, wenn eine Person eine bestimmte Anzahl an Aufträgen generiert hat oder wenn diese Person einer anderen Kundenklasse zugewiesen wurde. Weitere Informationen findest du auf der Handbuchseite xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktionen].
+
+[#e-mail-versand-an-mehrere-e-mail-adressen]
+=== E-Mail-Versand an mehrere E-Mail-Adressen
+
+Im Menü *Einrichtung » Aufträge » Ereignisse* kannst du eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] einrichten, die bei Eintritt des von dir gewählten Ereignisses in deinem plentyShop eine E-Mail an deine Kund:innen und Mitarbeiter:innen versendet.
+
+Füge in der Ereignisaktion die Aktion *Kunde > E-Mail versenden* hinzu und wähle dann dort die passende Vorlage sowie die Empfänger:innen, um die E-Mail bei Eintritt des gewählten Ereignisses zeitgleich an mehrere Empfänger:innen zu versenden.
+
+Die folgenden Empfänger:innen stehen zur Verfügung:
+
+* Kunde
+* Lager
+* Rechnungsadresse aus Auftrag
+* Lieferadresse aus Auftrag
+* Kontakt E-Mail geschäftlich
+* Kontakt E-Mail privat
+* Kontakt E-Mail PayPal
+* verfügbare Eigner
+
+Du kannst entweder die selbe Vorlage an alle Empfänger:innen senden oder jeweils eine separate Vorlage wählen.
+
 [#variablen-emailbuilder]
 == Verfügbare Variablen und twig expressions
 
-Erfahre in den folgenden Unterkapiteln, welche Variablen dir zur Verfügung stehen, die du in einigen der Widgets verwenden kannst, und wie die dazugehörigen twig expressions lauten. Die Variablen werden dann in der E-Mail an deine Kund:innen durch den korrekten Inhalt ersetzt. Die sogenannten twig expressions benötigst du für den Betreff deiner E-Mail und für das Code-Widget, da du in diesen beiden Fällen keine Variablen verwenden kannst.
+In einigen der Widgets kannst du Variablen einfügen und dir auf diese Weise die Vorlagen erstellen, die du benötigst. Die Variablen werden dann in der E-Mail an deine Kund:innen durch den korrekten Inhalt ersetzt.
+
+Die Tabellen im Kapitel <<#verfuegbare-variablen, Verfügbare Variablen>> enthalten neben den Variablen auch die dazugehörigen twig expressions. Twig expressions benötigst du für den Betreff deiner E-Mail und für das <<#intable-widget-code, Code-Widget>>, weil du dort keine Variablen verwenden kannst.
 
 [#twig-einleitung]
 === Twig expressions für das Code-Widget und den Betreff
@@ -788,7 +871,7 @@ Wenn du eine twig expression im Betreff der Vorlage verwenden möchtest, muss di
 
 Wenn du im Code-Widget beispielsweise mit link:https://twig.symfony.com/doc/3.x/tags/if.html[if-Abfragen^] arbeitest, benötigst du in der if-Abfrage selbst keine doppelt geschweiften Klammern zusätzlich, sondern nur im Fließtext. Allgemeine Informationen zu Twig findest du in der link:https://twig.symfony.com/doc/3.x/[Twig Documentation^].
 
-Im Kapitel <<#code-beispiele-code-widget, Code-Beispiele für das Code-Wigdet>> findest du einige if-Abfragen, die du einfach in dein Code-Widget kopieren kannst.
+Im Kapitel <<#code-beispiele-code-widget, Code-Beispiele für das Code-Widget>> findest du einige if-Abfragen, die du einfach in dein Code-Widget kopieren kannst.
 
 [#verfuegbare-variablen]
 === Verfügbare Variablen
@@ -1908,83 +1991,8 @@ Alternativ findest du die gespeicherte IBAN im Menü *Einrichtung » Einstellung
 
 |====
 
-
-
-[#e-mail-versand-automatisieren]
-== E-Mail-Versand automatisieren
-
-Dir stehen in plentymarkets mehrere Möglichkeiten zur Verfügung, den E-Mail-Versand an deine Kund:innen zu automatisieren.
-
-=== Automatischen E-Mail-Versand einrichten
-
-Im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Automatischer Versand* stehen dir verschiedene Ereignisse zur Verfügung, die mit einer Vorlage verknüpft werden können. Wähle aus der Dropdown-Liste die Vorlage, die du zuvor im Menü *CRM » EmailBuilder (Testphase)* <<#vorlage-erstellen, erstellt>> hast. Dadurch wird bei Eintritt des Ereignisses diese Vorlage automatisch an deine Kund:innen versendet.
-
-[IMPORTANT]
-.Verknüpfung vor Löschen der E-Mail-Vorlage entfernen
-====
-Das Löschen einer Vorlage, die mit einem Ereignis im Bereich *Automatischer Versand* verknüpft ist, kann zu unerwünschten Effekten führen. Entferne daher zunächst die Verknüpfung im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Automatischer Versand*, indem du in der Zeile des Ereignisses in der Dropdown-Liste die Option *Kein Versand* wählen. Anschließend löschst du die Vorlage im Menü *CRM » EmailBuilder (Testphase)*.
-====
-
-[.instruction]
-Automatischen E-Mail-Versand einrichten:
-
-. Öffne das Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Automatischer Versand*.
-. Wähle die in der Zeile des Ereignisses die Vorlage aus der Dropdown-Liste. Beachte dazu die Erläuterungen in <<#table-events-automatic-email-dispatch>>.
-. *Speichere* (icon:save[role="green"]) die Einstellungen.
-
-[[table-events-automatic-email-dispatch]]
-.Erläuterungen zu einigen Ereignissen für den automatischen Versand
-[cols="1,3"]
-|====
-|Einstellung |Erläuterung
-
-| *Neue Bestellung über den Webshop*
-|Sendet Kund:innen eine E-Mail mit der Auftragsbestätigung, nachdem der Kaufvorgang im Webshop abgeschlossen wurde. +
-*_Hinweis:_* Wenn du möchtest, dass dein:e Kund:in über diese E-Mail in die Auftragsabwicklung in deinem Webshop gelangen kann, um den Status der Bestellung einzusehen, musst du die Variable `URL zum Checkout` in die Vorlage, die du für dieses automatische Ereignis wählst, einfügen.
-
-| *Sende Kunde E-Mail zur Passwortänderung*
-|Sendet Kund:innen eine E-Mail mit einem Link zum neuen Passwort, der aktiv bestätigt werden muss. Die Variable `URL zum Ändern des Passworts` muss in der Vorlage enthalten sein.
-
-| *Newsletter Opt-In*
-|Sendet Kund:innen eine E-Mail, wenn die Kund:innen sich für den Newsletter angemeldet haben. Die Vorlage sollte den Bestätigungslink, den die Kund:innen anklicken müssen, um die Newsletter-Anmeldung abzuschließen, enthalten: `URL zur Bestätigung des Newsletter-Abonnements`.
-
-| *Bestätigung Newsletter Opt-In*
-|Sendet Kund:innen eine E-Mail als Bestätigung, sobald die Kund:innen den Bestätigungslink, der mit der E-Mail-Vorlage für das Ereignis *Newsletter Opt-In* versendet wurde, aktiviert haben.
-
-| *Benachrichtigung bei verfügbarem Artikel*
-|Sendet Kund:innen eine E-Mail mit dem Hinweis, dass ein bestimmter Artikel wieder verfügbar ist. Voraussetzung: Die Kund:innen haben zuvor ihre E-Mail-Adresse im Webshop bei dem nicht lieferbaren Artikel eingetragen.
-
-|====
-
-[#ereignisaktionen-einrichten]
-=== Ereignisaktionen einrichten
-
-Du hast außerdem die Möglichkeit, Ereignisaktionen im Menü *Einrichtung » Aufträge » Ereignisse* einzurichten. Definiere ein Ereignis, setze einen oder mehrere Filter und lege Aktionen fest, die von deinem plentymarkets System automatisch im Ereignisfall ausgeführt werden.
-
-Richte z.B. ein, dass der E-Mail-Versand eines Gutscheins ausgelöst wird, wenn eine Person eine bestimmte Anzahl an Aufträgen generiert hat. Weitere Informationen findest du auf der Handbuchseite xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktionen].
-
-[#e-mail-versand-an-mehrere-e-mail-adressen]
-=== E-Mail-Versand an mehrere E-Mail-Adressen
-
-Im Menü *Einrichtung » Aufträge » Ereignisse* kannst du eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] einrichten, die bei Eintritt des von dir gewählten Ereignisses in deinem plentyShop eine E-Mail an deine Kund:innen und Mitarbeiter:innen versendet.
-
-Füge in der Ereignisaktion die Aktion *Kunde > E-Mail versenden* hinzu und wähle dann dort die passende Vorlage sowie die Empfänger:innen, um die E-Mail bei Eintritt des gewählten Ereignisses zeitgleich an mehrere Empfänger:innen zu versenden.
-
-Die folgenden Empfänger:innen stehen zur Verfügung:
-
-* Kunde
-* Lager
-* Rechnungsadresse aus Auftrag
-* Lieferadresse aus Auftrag
-* Kontakt E-Mail geschäftlich
-* Kontakt E-Mail privat
-* Kontakt E-Mail PayPal
-* verfügbare Eigner
-
-Du kannst entweder die selbe Vorlage an alle Empfänger:innen senden oder jeweils eine separate Vorlage wählen.
-
 [#code-beispiele-code-widget]
-== Code-Beispiele für das Code-Wigdet
+== Code-Beispiele für das Code-Widget
 
 Setze in deinen E-Mail-Vorlagen Fallunterscheidungen nach den Prinzipien der if-Abfragen ein. Im Folgenden findest du einige if-Abfragen, die du einfach in dein Code-Widget kopieren kannst.
 
